Prevent zoom on mobile input

--- a/css/weather.css
+++ b/css/weather.css
@@ -21,6 +21,15 @@ body {
     color: var(--text_dark);
 }
 
+/* Prevent auto zoom on mobile */
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+    select,
+    textarea,
+    input {
+      font-size: 16px;
+    }
+  }
+
 .app-container {
     display: flex;
     justify-content: center;
